name:                labeled-graph
version:             0.1.0.0
synopsis:            A library for simple labeled graphs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              efasckenoth
maintainer:          efasckenoth@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.20

library
  exposed-modules:     Data.Graph.Simple.Vertex

  -- other-modules:       

  build-depends:       base         == 4.7.*
                     , containers   == 0.5.5.*
                     , vector       == 0.10.12.*

  -- hs-source-dirs:      
  default-language:    Haskell2010

  -- Turn on all warnings
  ghc-options:         -Wall
                       -O2

  default-extensions:  NoImplicitPrelude
                       UnicodeSyntax
