name:                labeled-graph
version:             0.1.0.0
synopsis:            A library for simple labeled graphs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              efasckenoth
maintainer:          efasckenoth@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.20

Benchmark benchmark
  type:                exitcode-stdio-1.0
  main-is:             benchmark/bench.hs
  build-depends:       base, time, vector, safe, containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2

  default-extensions:  NoImplicitPrelude
                       UnicodeSyntax

library
  exposed-modules:     Data.Graph.Simple.Vertex
                       Data.Graph.Simple.Edge
                       Data.Graph.Simple.Graph

  other-modules:       Data.Graph.Simple.Util

  build-depends:       base         == 4.7.*
                     , containers   == 0.5.5.*
                     , vector       == 0.10.12.*
                     , safe == 0.3.*

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2

  default-extensions:  NoImplicitPrelude
                       UnicodeSyntax
