name:                labeled-graph
version:             0.1.0.0
synopsis:            A library for simple labeled graphs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              efasckenoth
maintainer:          efasckenoth@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.20

Benchmark benchmark
  type:                exitcode-stdio-1.0
  main-is:             benchmark/bench.hs
  build-depends:       base, time, vector, safe, containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2

  default-extensions:  NoImplicitPrelude
                       UnicodeSyntax

Test-Suite test-lgraph
  type:                exitcode-stdio-1.0
  main-is:             test.hs
 
  hs-source-dirs:      "." ,test

  build-depends:       base, vector, safe, containers
                     , HTF          == 0.12.2.*
                     , QuickCheck   == 2.8

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2

  default-extensions:  UnicodeSyntax

library
  exposed-modules:     Data.Graph.Simple.LGraph
                       Data.Graph.Simple.Vertex
                       Data.Graph.Simple.Edge
                       Data.Graph.Simple.Graph

  other-modules:       Data.Graph.Simple.Util

  build-depends:       base         == 4.7.*
                     , bitset       == 1.4.*
                     , containers   == 0.5.5.*
                     , deepseq      == 1.3.0.*
                     , safe         == 0.3.*
                     , vector       == 0.10.12.*

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2

  default-extensions:  UnicodeSyntax
